fix: No wrap on shipping price and currency (order step).

--- a/bin/css/order.css
+++ b/bin/css/order.css
@@ -385,6 +385,7 @@ input.quiqqer-coupons-couponcodeinput-input:active {
 
 .quiqqer-order-step-shipping-list-entry-price {
     display: flex;
+    white-space: nowrap;
 }
 
 @media (max-width: 768px) {
